LA-106 Fixing layout issues due to compass version change.

--- a/docroot/profiles/labp/themes/la/lasbptheme/sass/components/_section_content.scss
+++ b/docroot/profiles/labp/themes/la/lasbptheme/sass/components/_section_content.scss
@@ -35,7 +35,7 @@
   margin:0 0 18px 0;
   padding: 0;
   font-size:1.714em;
-  width: 100%;
+  width: $zen-grid-width;
   @include window_size(tab-wide-up){
     font-size: 2.571em;
     margin:0 0 30px 0;
@@ -82,16 +82,10 @@
 .panel__content_wrapper{
   @include zen-grid-container();
   @include window_size(desktop){
-    width: $zen-grid-width;
     margin-left: auto;
     margin-right: auto;
   }
 }
-.panel__content_col_1 {
-  width:100%;
-  @include window_size(desktop) {
-    padding: 75px 0 0 20px;
-  }
-}
+
 
 
